<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BusinessCardManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="icon_drawer">&#xf0c9;</string>
    <string name="icon_close">&#xf00d;</string>
    <string name="icon_back">&#xf053;</string>
    <string name="icon_card">&#xf1ad;</string>
    <string name="icon_call">&#xf095;</string>
    <string name="icon_email">&#xf003;</string>
    <string name="icon_web">&#xf108;</string>
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_legal">&#xf0e3;</string>
    <string name="icon_computer">&#xf109;</string>
    <string name="icon_construction">&#xf1ad;</string>
    <string name="icon_banking">&#xf19c;</string>
    <string name="icon_communication">&#xf1d7;</string>
    <string name="icon_right">&#xf061;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_cancel">&#xf057;</string>
    <string name="icon_facebook">&#xf082;</string>
    <string name="icon_linkedin">&#xf08c;</string>
    <string name="icon_users">&#xf0c0;</string>
    <string name="icon_list">&#xf00b;</string>
    
    <string name="tv_signup"><u>Create an account</u></string>
    <string name="tv_forgot_pass"><u>I forgot my password</u></string>

</resources>