<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/view_border"
            android:orientation="horizontal"
            android:padding="4dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(Your Name)"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvtitlee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(Your Title)"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvcompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(Your Company)"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(Your Phone Number)"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(Your Email Address)"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvweb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(Your Website)"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvfbid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(Your Facebook ID)"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvinid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(Your LinkedIn ID)"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ivuser"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/view_border"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="@dimen/create_card_tv_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Your Name:"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/etname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="@dimen/create_card_tv_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Title:"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/ettitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Title"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="@dimen/create_card_tv_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Company:"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/etcompany"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Company Name"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tviconphone"
                        android:layout_width="@dimen/create_card_tv_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/icon_call"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/etphone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Telephone Number"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tviconemail"
                        android:layout_width="@dimen/create_card_tv_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/icon_email"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/etemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Email Address"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tviconweb"
                        android:layout_width="@dimen/create_card_tv_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/icon_web"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/etweb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Website"
                        android:inputType="textUri" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tviconfb"
                        android:layout_width="@dimen/create_card_tv_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/icon_facebook"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/etfb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Facebook ID" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tviconin"
                        android:layout_width="@dimen/create_card_tv_width"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/icon_linkedin"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/etin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="LinkedIn ID" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="1dp" >

            <Button
                android:id="@+id/btnstyle"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:background="@drawable/btn_bg"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="Style"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/btncolor"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:background="@drawable/btn_bg"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="Color"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnsave"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:background="@drawable/btn_bg"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="Save"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/btncancel"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="Cancel"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>